Simplify the archive and fix some spacing

--- a/mkweb/static/mkweb/scss/app.scss
+++ b/mkweb/static/mkweb/scss/app.scss
@@ -11,7 +11,11 @@ $h3-font-size: $h4-font-size * $f;
 $h2-font-size: $h3-font-size * $f;
 $h1-font-size: $h2-font-size * $f;
 
+$side-nav-padding: rem-calc(0 0);
+$side-nav-list-margin: rem-calc(0 0 0 0);
+
 $topbar-breakpoint: 1px;
+$topbar-margin-bottom: 1.0rem;
 
 
 // Or selectively include components
@@ -53,6 +57,10 @@ $topbar-breakpoint: 1px;
 //   "foundation/components/visibility";
 
 
+body {
+    overflow-y: scroll;
+}
+
 h1 a {
     color: $body-font-color;
 }
@@ -65,6 +73,11 @@ h1 a {
 
 .search {
     margin-top: 1.25em;
+}
+
+.side-nav a {
+    padding: 0 0 0.3rem 0 !important;
+    margin: 0 !important;
 }
 
 .gallery.open {
